--- a/FoodPiper/FriendView.xib
+++ b/FoodPiper/FriendView.xib
@@ -162,6 +162,9 @@
                             <include reference="w0I-I7-26T"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <action selector="peepPipesButtonPressed:" destination="-1" eventType="touchUpInside" id="1ZY-nM-smM"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jo1-V1-aH1">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
