Invite action being sent

--- a/FoodPiper/InviteEatView.xib
+++ b/FoodPiper/InviteEatView.xib
@@ -119,6 +119,9 @@
                             <include reference="QW0-ve-zAf"/>
                         </mask>
                     </variation>
+                    <connections>
+                        <action selector="sendInvite:" destination="-1" eventType="touchUpInside" id="wAJ-vW-cWb"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
