--- a/FoodPiper/InviteTableViewCell.xib
+++ b/FoodPiper/InviteTableViewCell.xib
@@ -1,15 +1,63 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ActivityViewController" customModule="FoodPiper" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-        </view>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="Ec6-MA-0a6" customClass="MessageTableViewCell" customModule="FoodPiper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ec6-MA-0a6" id="zd0-pO-0NE">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="83.5"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="239" translatesAutoresizingMaskIntoConstraints="NO" id="EgP-bj-vKr">
+                        <rect key="frame" x="40" y="15" width="239" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cTP-4E-CSe">
+                        <rect key="frame" x="71" y="44" width="49" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="KKk-bQ-iGC"/>
+                            <constraint firstAttribute="width" constant="49" id="zxm-2n-2bJ"/>
+                        </constraints>
+                        <state key="normal" title="Accept"/>
+                        <connections>
+                            <action selector="acceptMealInvite:" destination="-1" eventType="touchUpInside" id="9WU-x6-jGG"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSs-13-P7B">
+                        <rect key="frame" x="198" y="44" width="52" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="52" id="Psa-uM-A5F"/>
+                            <constraint firstAttribute="height" constant="30" id="umY-J8-25u"/>
+                        </constraints>
+                        <state key="normal" title="Decline"/>
+                        <connections>
+                            <action selector="declineMealInvite:" destination="-1" eventType="touchUpInside" id="o6x-aq-PVJ"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="cTP-4E-CSe" firstAttribute="top" secondItem="EgP-bj-vKr" secondAttribute="bottom" constant="8" id="3bm-dq-L7d"/>
+                    <constraint firstItem="VSs-13-P7B" firstAttribute="centerX" secondItem="zd0-pO-0NE" secondAttribute="centerX" constant="64" id="74C-yp-hbh"/>
+                    <constraint firstItem="cTP-4E-CSe" firstAttribute="centerX" secondItem="zd0-pO-0NE" secondAttribute="centerX" constant="-64" id="7gP-c0-stj"/>
+                    <constraint firstItem="EgP-bj-vKr" firstAttribute="top" secondItem="zd0-pO-0NE" secondAttribute="topMargin" constant="7" id="Lmi-bA-BYA"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="EgP-bj-vKr" secondAttribute="trailing" constant="33" id="Rgk-ir-fqX"/>
+                    <constraint firstItem="EgP-bj-vKr" firstAttribute="leading" secondItem="zd0-pO-0NE" secondAttribute="leadingMargin" constant="32" id="UBu-u7-CRT"/>
+                    <constraint firstItem="VSs-13-P7B" firstAttribute="top" secondItem="EgP-bj-vKr" secondAttribute="bottom" constant="8" id="lkS-bP-del"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="cTP-4E-CSe" secondAttribute="bottom" constant="1.5" id="llC-50-8eN"/>
+                </constraints>
+            </tableViewCellContentView>
+            <connections>
+                <outlet property="lblMessage" destination="EgP-bj-vKr" id="KGt-ID-k1m"/>
+            </connections>
+            <point key="canvasLocation" x="236" y="109"/>
+        </tableViewCell>
     </objects>
 </document>
