--- a/FoodPiper/FilterView.xib
+++ b/FoodPiper/FilterView.xib
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="categoryCollapsedView" destination="dPZ-7i-Cup" id="1QN-g4-cRr"/>
                 <outlet property="categoryHeightConstraint" destination="mrO-HE-29l" id="AzA-Ui-Fex"/>
+                <outlet property="pricingSegmentControl" destination="Nbm-AP-dL8" id="v3f-P6-6KG"/>
                 <outlet property="view" destination="iN0-l3-epB" id="ksi-Az-Q0G"/>
             </connections>
         </placeholder>
@@ -94,37 +95,60 @@
                                 </mask>
                             </variation>
                         </view>
+                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" translatesAutoresizingMaskIntoConstraints="NO" id="Nbm-AP-dL8">
+                            <rect key="frame" x="-60" y="-14" width="121" height="29"/>
+                            <segments>
+                                <segment title="$"/>
+                                <segment title="$$"/>
+                                <segment title="$$$"/>
+                                <segment title="$$$$"/>
+                            </segments>
+                            <connections>
+                                <action selector="pricingSelected:" destination="-1" eventType="valueChanged" id="Q1l-2J-W5c"/>
+                            </connections>
+                        </segmentedControl>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="400" id="20M-qS-qes"/>
+                        <constraint firstAttribute="trailing" secondItem="Nbm-AP-dL8" secondAttribute="trailing" id="9No-cK-yV7"/>
                         <constraint firstItem="dPZ-7i-Cup" firstAttribute="top" secondItem="Tke-gv-reR" secondAttribute="top" constant="28" id="C8v-uu-bLU"/>
+                        <constraint firstItem="Nbm-AP-dL8" firstAttribute="top" secondItem="dPZ-7i-Cup" secondAttribute="bottom" constant="26" id="FUH-m0-iwC"/>
+                        <constraint firstItem="Nbm-AP-dL8" firstAttribute="leading" secondItem="Tke-gv-reR" secondAttribute="leading" id="HBf-XN-b98"/>
                         <constraint firstAttribute="trailing" secondItem="dPZ-7i-Cup" secondAttribute="trailing" id="J8w-ZV-oYa"/>
-                        <constraint firstAttribute="bottom" secondItem="dPZ-7i-Cup" secondAttribute="bottom" constant="20" id="hFf-HT-Chm"/>
+                        <constraint firstAttribute="bottom" secondItem="Nbm-AP-dL8" secondAttribute="bottom" constant="61" id="xtB-4L-P0p"/>
                         <constraint firstItem="dPZ-7i-Cup" firstAttribute="leading" secondItem="Tke-gv-reR" secondAttribute="leading" id="zsv-Es-GOt"/>
                     </constraints>
                     <variation key="default">
                         <mask key="subviews">
                             <exclude reference="dPZ-7i-Cup"/>
+                            <exclude reference="Nbm-AP-dL8"/>
                         </mask>
                         <mask key="constraints">
                             <exclude reference="20M-qS-qes"/>
                             <exclude reference="C8v-uu-bLU"/>
                             <exclude reference="J8w-ZV-oYa"/>
-                            <exclude reference="hFf-HT-Chm"/>
                             <exclude reference="zsv-Es-GOt"/>
+                            <exclude reference="9No-cK-yV7"/>
+                            <exclude reference="FUH-m0-iwC"/>
+                            <exclude reference="HBf-XN-b98"/>
+                            <exclude reference="xtB-4L-P0p"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
                         <mask key="subviews">
                             <include reference="dPZ-7i-Cup"/>
+                            <include reference="Nbm-AP-dL8"/>
                         </mask>
                         <mask key="constraints">
                             <include reference="20M-qS-qes"/>
                             <include reference="C8v-uu-bLU"/>
                             <include reference="J8w-ZV-oYa"/>
-                            <include reference="hFf-HT-Chm"/>
                             <include reference="zsv-Es-GOt"/>
+                            <include reference="9No-cK-yV7"/>
+                            <include reference="FUH-m0-iwC"/>
+                            <include reference="HBf-XN-b98"/>
+                            <include reference="xtB-4L-P0p"/>
                         </mask>
                     </variation>
                 </view>
@@ -159,7 +183,7 @@
                     <include reference="wb7-84-Yy5"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="658" y="-453.5"/>
+            <point key="canvasLocation" x="658" y="-406"/>
         </view>
     </objects>
 </document>
