--- a/FoodPiper/FilterAvailabilityView.xib
+++ b/FoodPiper/FilterAvailabilityView.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view tag="999" contentMode="scaleToFill" id="iN0-l3-epB">
+        <view tag="999" contentMode="scaleToFill" id="iN0-l3-epB" customClass="FilteringView" customModule="FoodPiper" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="443"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
